apps/cli/crates/onequery-cli/src/snapshots/oneq__cli__tests__auth_help_output_snapshot_targets_auth_surface.snap
---
source: crates/onequery-cli/src/cli.rs
expression: rendered
---
Manage authentication and stored sessions

Usage: oneq auth [OPTIONS] <COMMAND>

Commands:
  login    Start browser-based login and persist the resulting session
  import   Import one auth session payload from disk or stdin
  logout   Clear the stored auth session and active org selection
  whoami   Show the authenticated user and effective org context
  session  Inspect or manage the stored session lifecycle
  help     Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --org <ORG_SLUG>           Override the active org for this invocation
  -c, --config <KEY=VALUE>       Apply a raw config override for this invocation using `key=value`
      --request-id <REQUEST_ID>  Attach a caller-supplied request ID to outbound API requests
      --timeout <SECONDS>        Override the request timeout in seconds for this invocation
      --output <OUTPUT>          Choose text or JSON output [possible values: text, json]
      --verbose                  Emit workflow progress and retry tracing to stderr
