apps/cli/crates/onequery-cli/src/snapshots/oneq__cli__tests__org_use_help_output_keeps_global_org_override_visible.snap
---
source: crates/onequery-cli/src/cli.rs
expression: rendered
---
Persist the selected org as the active default

Usage: oneq org use [OPTIONS] <ORG_SLUG>

Arguments:
  <ORG_SLUG>  Persist this org slug as the active org

Options:
      --dry-run  Validate the selection without updating local config
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --org <ORG_SLUG>           Override the active org for this invocation
  -c, --config <KEY=VALUE>       Apply a raw config override for this invocation using `key=value`
      --request-id <REQUEST_ID>  Attach a caller-supplied request ID to outbound API requests
      --timeout <SECONDS>        Override the request timeout in seconds for this invocation
      --output <OUTPUT>          Choose text or JSON output [possible values: text, json]
      --verbose                  Emit workflow progress and retry tracing to stderr
