apps/cli/crates/onequery-cli/src/snapshots/oneq__cli__tests__serve_help_output_snapshot_targets_serve_surface.snap
---
source: crates/onequery-cli/src/cli.rs
expression: rendered
---
Bootstrap or inspect the self-host runtime lifecycle surface

Usage: oneq serve [OPTIONS] [COMMAND]

Commands:
  start   Bootstrap the self-host runtime foundation and prepare to launch
  stop    Stop the self-host runtime if a managed process is present
  status  Show the current self-host runtime state and derived paths
  logs    Show the current self-host server log path and any available preview
  help    Print this message or the help of the given subcommand(s)

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --org <ORG_SLUG>           Override the active org for this invocation
  -c, --config <KEY=VALUE>       Apply a raw config override for this invocation using `key=value`
      --request-id <REQUEST_ID>  Attach a caller-supplied request ID to outbound API requests
      --timeout <SECONDS>        Override the request timeout in seconds for this invocation
      --output <OUTPUT>          Choose text or JSON output [possible values: text, json]
      --verbose                  Emit workflow progress and retry tracing to stderr
